add kafka scripts

--- a/notebook/kafkaProducer.ipynb
+++ b/notebook/kafkaProducer.ipynb
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<kafka.producer.future.FutureRecordMetadata at 0x1e00a46a9d0>"
+       "<kafka.producer.future.FutureRecordMetadata at 0x2882fe4ad90>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
