--- a/notebook/kafkaConsumer.ipynb
+++ b/notebook/kafkaConsumer.ipynb
@@ -25,19 +25,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'Date': '2024-01-19T00:00:00', 'Day': 19, 'Month': 1, 'Year': 2024, 'Price': 41618.41}\n",
+      "{'Date': '2024-01-20T00:00:00', 'Day': 20, 'Month': 1, 'Year': 2024, 'Price': 41665.59}\n",
+      "{'Date': '2024-01-21T00:00:00', 'Day': 21, 'Month': 1, 'Year': 2024, 'Price': 41545.79}\n",
+      "{'Date': '2024-01-22T00:00:00', 'Day': 22, 'Month': 1, 'Year': 2024, 'Price': 39507.37}\n",
+      "{'Date': '2024-01-23T00:00:00', 'Day': 23, 'Month': 1, 'Year': 2024, 'Price': 39845.55}\n",
+      "{'Date': '2024-01-24T00:00:00', 'Day': 24, 'Month': 1, 'Year': 2024, 'Price': 40077.07}\n",
+      "{'Date': '2024-01-25T00:00:00', 'Day': 25, 'Month': 1, 'Year': 2024, 'Price': 39933.81}\n",
+      "{'Date': '2024-01-26T00:00:00', 'Day': 26, 'Month': 1, 'Year': 2024, 'Price': 41816.87}\n",
+      "{'Date': '2024-01-27T00:00:00', 'Day': 27, 'Month': 1, 'Year': 2024, 'Price': 42120.05}\n",
+      "{'Date': '2024-01-01T00:00:00', 'Day': 1, 'Month': 1, 'Year': 2024, 'Price': 44167.33}\n",
+      "{'Date': '2024-01-02T00:00:00', 'Day': 2, 'Month': 1, 'Year': 2024, 'Price': 44957.97}\n",
+      "{'Date': '2024-01-03T00:00:00', 'Day': 3, 'Month': 1, 'Year': 2024, 'Price': 42848.18}\n",
+      "{'Date': '2024-01-04T00:00:00', 'Day': 4, 'Month': 1, 'Year': 2024, 'Price': 44179.92}\n",
+      "{'Date': '2024-01-05T00:00:00', 'Day': 5, 'Month': 1, 'Year': 2024, 'Price': 44162.69}\n",
+      "{'Date': '2024-01-06T00:00:00', 'Day': 6, 'Month': 1, 'Year': 2024, 'Price': 43989.2}\n",
+      "{'Date': '2024-01-07T00:00:00', 'Day': 7, 'Month': 1, 'Year': 2024, 'Price': 43943.1}\n",
       "{'Date': '2024-01-08T00:00:00', 'Day': 8, 'Month': 1, 'Year': 2024, 'Price': 46970.5}\n",
       "{'Date': '2024-01-09T00:00:00', 'Day': 9, 'Month': 1, 'Year': 2024, 'Price': 46139.73}\n",
       "{'Date': '2024-01-10T00:00:00', 'Day': 10, 'Month': 1, 'Year': 2024, 'Price': 46627.78}\n",
       "{'Date': '2024-01-11T00:00:00', 'Day': 11, 'Month': 1, 'Year': 2024, 'Price': 46368.59}\n",
       "{'Date': '2024-01-12T00:00:00', 'Day': 12, 'Month': 1, 'Year': 2024, 'Price': 42853.17}\n",
-      "{'Date': '2024-01-13T00:00:00', 'Day': 13, 'Month': 1, 'Year': 2024, 'Price': 42842.38}\n"
+      "{'Date': '2024-01-13T00:00:00', 'Day': 13, 'Month': 1, 'Year': 2024, 'Price': 42842.38}\n",
+      "{'Date': '2024-01-14T00:00:00', 'Day': 14, 'Month': 1, 'Year': 2024, 'Price': 41796.27}\n",
+      "{'Date': '2024-01-15T00:00:00', 'Day': 15, 'Month': 1, 'Year': 2024, 'Price': 42511.97}\n",
+      "{'Date': '2024-01-16T00:00:00', 'Day': 16, 'Month': 1, 'Year': 2024, 'Price': 43154.95}\n",
+      "{'Date': '2024-01-17T00:00:00', 'Day': 17, 'Month': 1, 'Year': 2024, 'Price': 42742.65}\n",
+      "{'Date': '2024-01-18T00:00:00', 'Day': 18, 'Month': 1, 'Year': 2024, 'Price': 41262.06}\n",
+      "{'Date': '2024-01-19T00:00:00', 'Day': 19, 'Month': 1, 'Year': 2024, 'Price': 41618.41}\n",
+      "{'Date': '2024-01-20T00:00:00', 'Day': 20, 'Month': 1, 'Year': 2024, 'Price': 41665.59}\n",
+      "{'Date': '2024-01-21T00:00:00', 'Day': 21, 'Month': 1, 'Year': 2024, 'Price': 41545.79}\n",
+      "{'Date': '2024-01-22T00:00:00', 'Day': 22, 'Month': 1, 'Year': 2024, 'Price': 39507.37}\n",
+      "{'Date': '2024-01-23T00:00:00', 'Day': 23, 'Month': 1, 'Year': 2024, 'Price': 39845.55}\n",
+      "{'Date': '2024-01-24T00:00:00', 'Day': 24, 'Month': 1, 'Year': 2024, 'Price': 40077.07}\n",
+      "{'Date': '2024-01-25T00:00:00', 'Day': 25, 'Month': 1, 'Year': 2024, 'Price': 39933.81}\n",
+      "{'Date': '2024-01-26T00:00:00', 'Day': 26, 'Month': 1, 'Year': 2024, 'Price': 41816.87}\n",
+      "{'Date': '2024-01-27T00:00:00', 'Day': 27, 'Month': 1, 'Year': 2024, 'Price': 42120.05}\n",
+      "{'Date': '2024-01-28T00:00:00', 'Day': 28, 'Month': 1, 'Year': 2024, 'Price': 42035.59}\n",
+      "{'Date': '2024-01-29T00:00:00', 'Day': 29, 'Month': 1, 'Year': 2024, 'Price': 43288.25}\n",
+      "{'Date': '2024-01-30T00:00:00', 'Day': 30, 'Month': 1, 'Year': 2024, 'Price': 42952.61}\n",
+      "{'Date': '2024-01-01T00:00:00', 'Day': 1, 'Month': 1, 'Year': 2024, 'Price': 44167.33}\n",
+      "{'Date': '2024-01-31T00:00:00', 'Day': 31, 'Month': 1, 'Year': 2024, 'Price': 42582.61}\n",
+      "{'Date': '2024-01-02T00:00:00', 'Day': 2, 'Month': 1, 'Year': 2024, 'Price': 44957.97}\n",
+      "{'Date': '2024-02-01T00:00:00', 'Day': 1, 'Month': 2, 'Year': 2024, 'Price': 43075.77}\n",
+      "{'Date': '2024-01-03T00:00:00', 'Day': 3, 'Month': 1, 'Year': 2024, 'Price': 42848.18}\n",
+      "{'Date': '2024-02-02T00:00:00', 'Day': 2, 'Month': 2, 'Year': 2024, 'Price': 43185.86}\n",
+      "{'Date': '2024-01-04T00:00:00', 'Day': 4, 'Month': 1, 'Year': 2024, 'Price': 44179.92}\n",
+      "{'Date': '2024-02-03T00:00:00', 'Day': 3, 'Month': 2, 'Year': 2024, 'Price': 42992.25}\n",
+      "{'Date': '2024-01-05T00:00:00', 'Day': 5, 'Month': 1, 'Year': 2024, 'Price': 44162.69}\n",
+      "{'Date': '2024-02-04T00:00:00', 'Day': 4, 'Month': 2, 'Year': 2024, 'Price': 42583.58}\n",
+      "{'Date': '2024-01-06T00:00:00', 'Day': 6, 'Month': 1, 'Year': 2024, 'Price': 43989.2}\n",
+      "{'Date': '2024-02-05T00:00:00', 'Day': 5, 'Month': 2, 'Year': 2024, 'Price': 42658.67}\n",
+      "{'Date': '2024-01-07T00:00:00', 'Day': 7, 'Month': 1, 'Year': 2024, 'Price': 43943.1}\n",
+      "{'Date': '2024-02-06T00:00:00', 'Day': 6, 'Month': 2, 'Year': 2024, 'Price': 43084.67}\n",
+      "{'Date': '2024-01-08T00:00:00', 'Day': 8, 'Month': 1, 'Year': 2024, 'Price': 46970.5}\n",
+      "{'Date': '2024-02-07T00:00:00', 'Day': 7, 'Month': 2, 'Year': 2024, 'Price': 44318.22}\n",
+      "{'Date': '2024-01-09T00:00:00', 'Day': 9, 'Month': 1, 'Year': 2024, 'Price': 46139.73}\n",
+      "{'Date': '2024-02-08T00:00:00', 'Day': 8, 'Month': 2, 'Year': 2024, 'Price': 45301.57}\n",
+      "{'Date': '2024-01-10T00:00:00', 'Day': 10, 'Month': 1, 'Year': 2024, 'Price': 46627.78}\n",
+      "{'Date': '2024-02-09T00:00:00', 'Day': 9, 'Month': 2, 'Year': 2024, 'Price': 47147.2}\n",
+      "{'Date': '2024-01-11T00:00:00', 'Day': 11, 'Month': 1, 'Year': 2024, 'Price': 46368.59}\n",
+      "{'Date': '2024-02-10T00:00:00', 'Day': 10, 'Month': 2, 'Year': 2024, 'Price': 47771.28}\n",
+      "{'Date': '2024-01-12T00:00:00', 'Day': 12, 'Month': 1, 'Year': 2024, 'Price': 42853.17}\n",
+      "{'Date': '2024-02-11T00:00:00', 'Day': 11, 'Month': 2, 'Year': 2024, 'Price': 48293.92}\n",
+      "{'Date': '2024-01-13T00:00:00', 'Day': 13, 'Month': 1, 'Year': 2024, 'Price': 42842.38}\n",
+      "{'Date': '2024-02-12T00:00:00', 'Day': 12, 'Month': 2, 'Year': 2024, 'Price': 49958.22}\n",
+      "{'Date': '2024-01-14T00:00:00', 'Day': 14, 'Month': 1, 'Year': 2024, 'Price': 41796.27}\n"
      ]
     },
     {
@@ -47,7 +107,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#load real time data to json file\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# for data in consumer:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#     with open(\"IBM-stock-market.json\", \"a\") as file:\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#         dump(data.value, file)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m data \u001b[38;5;129;01min\u001b[39;00m consumer:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mvalue)\n",
+      "Cell \u001b[1;32mIn[4], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#load real time data to json file\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# for data in consumer:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#     with open(\"IBM-stock-market.json\", \"a\") as file:\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#         dump(data.value, file)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m data \u001b[38;5;129;01min\u001b[39;00m consumer:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(data\u001b[38;5;241m.\u001b[39mvalue)\n",
       "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\kafka\\consumer\\group.py:1193\u001b[0m, in \u001b[0;36mKafkaConsumer.__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1190'>1191</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnext_v1()\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1191'>1192</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1192'>1193</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnext_v2()\n",
       "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\kafka\\consumer\\group.py:1201\u001b[0m, in \u001b[0;36mKafkaConsumer.next_v2\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1198'>1199</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_iterator \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_message_generator_v2()\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1199'>1200</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1200'>1201</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mnext\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_iterator)\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1201'>1202</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m:\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1202'>1203</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_iterator \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
       "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\kafka\\consumer\\group.py:1116\u001b[0m, in \u001b[0;36mKafkaConsumer._message_generator_v2\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1113'>1114</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_message_generator_v2\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1114'>1115</a>\u001b[0m     timeout_ms \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m*\u001b[39m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_consumer_timeout \u001b[39m-\u001b[39m time\u001b[39m.\u001b[39mtime())\n\u001b[1;32m-> <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1115'>1116</a>\u001b[0m     record_map \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpoll(timeout_ms\u001b[39m=\u001b[39;49mtimeout_ms, update_offsets\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1116'>1117</a>\u001b[0m     \u001b[39mfor\u001b[39;00m tp, records \u001b[39min\u001b[39;00m six\u001b[39m.\u001b[39miteritems(record_map):\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1117'>1118</a>\u001b[0m         \u001b[39m# Generators are stateful, and it is possible that the tp / records\u001b[39;00m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1118'>1119</a>\u001b[0m         \u001b[39m# here may become stale during iteration -- i.e., we seek to a\u001b[39;00m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1119'>1120</a>\u001b[0m         \u001b[39m# different offset, pause consumption, or lose assignment.\u001b[39;00m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1120'>1121</a>\u001b[0m         \u001b[39mfor\u001b[39;00m record \u001b[39min\u001b[39;00m records:\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1121'>1122</a>\u001b[0m             \u001b[39m# is_fetchable(tp) should handle assignment changes and offset\u001b[39;00m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1122'>1123</a>\u001b[0m             \u001b[39m# resets; for all other changes (e.g., seeks) we'll rely on the\u001b[39;00m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1123'>1124</a>\u001b[0m             \u001b[39m# outer function destroying the existing iterator/generator\u001b[39;00m\n\u001b[0;32m   <a href='file:///c%3A/Users/Lenovo/AppData/Local/Programs/Python/Python38/lib/site-packages/kafka/consumer/group.py?line=1124'>1125</a>\u001b[0m             \u001b[39m# via self._iterator = None\u001b[39;00m\n",
